--- a/.github/workflows/sync-dual.yml
+++ b/.github/workflows/sync-dual.yml
@@ -1,4 +1,4 @@
-name: Sync Beijing + Shanghai
+name: Sync Beijing + Shanghai (Unicom/Telecom Sources)
 
 on:
   schedule:
@@ -32,44 +32,44 @@ jobs:
             echo "Beijing iptv.m3u not found"
           fi
 
-      # 同步上海官方源（换新源：hujingguang + suxuang）
+      # 同步上海（主源 hujingguang 实时 + 备用 suxuang + 联通手动填充）
       - name: Sync Shanghai (SHTV)
         run: |
-          # 拉取主源 hujingguang/ChinaIPTV（实时更新）
+          # 主源：hujingguang/ChinaIPTV（实时更新）
           curl -s "https://raw.githubusercontent.com/hujingguang/ChinaIPTV/main/cnTV_AutoUpdate.m3u8" -o shanghai_raw.m3u8 || echo "Failed to fetch hujingguang"
           if [ ! -s "shanghai_raw.m3u8" ]; then
-            # 备用 suxuang/myIPTV
+            # 备用：suxuang/myIPTV
             curl -s "https://raw.githubusercontent.com/suxuang/myIPTV/main/直播源.m3u8" -o shanghai_raw.m3u8 || echo "Failed to fetch suxuang"
           fi
           if [ -s "shanghai_raw.m3u8" ]; then
-            # 过滤上海频道（关键词优化）
-            grep -i -E "(东方卫视|上海卫视|SHTV|上海新闻|上海纪实|上海体育|上海影视|上海少儿|上海游戏|上海动漫|上海生活|上海文广|上海演艺|第一财经)" shanghai_raw.m3u8 > playlist_shanghai.m3u || echo "No Shanghai channels found in grep"
-            # 如果 grep 空，添加手动填充（2025 可用源）
-            if [ ! -s "playlist_shanghai.m3u" ]; then
-              echo "#EXTM3U" > playlist_shanghai.m3u
-              echo "# 上海全频道（手动填充，2025-11 最新）" >> playlist_shanghai.m3u
-              echo '#EXTINF:-1 tvg-logo="https://www.smg.cn/favicon.ico",东方卫视 HD' >> playlist_shanghai.m3u
-              echo 'http://ottrrs.hl.chinamobile.com/PLTV/88888888/224/3221226409/index.m3u8' >> playlist_shanghai.m3u
-              echo '#EXTINF:-1 tvg-logo="https://www.smg.cn/favicon.ico",SHTV新闻综合 HD' >> playlist_shanghai.m3u
-              echo 'http://39.134.24.166/dbiptv.sn.chinamobile.com/PLTV/88888888/224/3221226410/index.m3u8' >> playlist_shanghai.m3u
-              echo '#EXTINF:-1 tvg-logo="https://www.smg.cn/favicon.ico",SHTV体育 HD' >> playlist_shanghai.m3u
-              echo 'http://39.134.24.166/dbiptv.sn.chinamobile.com/PLTV/88888888/224/3221226414/index.m3u8' >> playlist_shanghai.m3u
-              echo '#EXTINF:-1 tvg-logo="https://www.smg.cn/favicon.ico",SHTV影视 HD' >> playlist_shanghai.m3u
-              echo 'http://39.134.24.166/dbiptv.sn.chinamobile.com/PLTV/88888888/224/3221226416/index.m3u8' >> playlist_shanghai.m3u
-              echo '#EXTINF:-1 tvg-logo="https://www.smg.cn/favicon.ico",SHTV第一财经 HD' >> playlist_shanghai.m3u
-              echo 'http://39.134.24.166/dbiptv.sn.chinamobile.com/PLTV/88888888/224/3221226426/index.m3u8' >> playlist_shanghai.m3u
-            fi
-            git add playlist_shanghai.m3u
-            git commit -m "Update Shanghai M3U" || echo "No Shanghai changes"
-          else
-            echo "Shanghai raw file empty"
+            # 过滤上海频道（优化关键词）
+            grep -i -E "(东方卫视|上海卫视|SHTV|上海新闻|上海纪实|上海体育|上海影视|上海少儿|上海游戏|上海动漫|上海生活|上海文广|上海演艺|第一财经|上海综合)" shanghai_raw.m3u8 > playlist_shanghai.m3u || echo "No Shanghai channels in grep"
           fi
+          # 兜底：联通/电信手动填充（2025 可用，非移动）
+          if [ ! -s "playlist_shanghai.m3u" ]; then
+            echo "#EXTM3U" > playlist_shanghai.m3u
+            echo "# 上海全频道（联通/电信源，2025-11 最新）" >> playlist_shanghai.m3u
+            echo '#EXTINF:-1 tvg-logo="https://www.smg.cn/favicon.ico",东方卫视 HD (联通源)' >> playlist_shanghai.m3u
+            echo 'http://121.24.98.226:8090/hls/38/index.m3u8' >> playlist_shanghai.m3u
+            echo '#EXTINF:-1 tvg-logo="https://www.smg.cn/favicon.ico",SHTV新闻综合 HD' >> playlist_shanghai.m3u
+            echo 'http://121.24.98.226:8090/hls/39/index.m3u8' >> playlist_shanghai.m3u
+            echo '#EXTINF:-1 tvg-logo="https://www.smg.cn/favicon.ico",SHTV体育 HD' >> playlist_shanghai.m3u
+            echo 'http://121.24.98.226:8090/hls/40/index.m3u8' >> playlist_shanghai.m3u
+            echo '#EXTINF:-1 tvg-logo="https://www.smg.cn/favicon.ico",SHTV影视 HD' >> playlist_shanghai.m3u
+            echo 'http://121.24.98.226:8090/hls/41/index.m3u8' >> playlist_shanghai.m3u
+            echo '#EXTINF:-1 tvg-logo="https://www.smg.cn/favicon.ico",SHTV第一财经 HD' >> playlist_shanghai.m3u
+            echo 'http://121.24.98.226:8090/hls/42/index.m3u8' >> playlist_shanghai.m3u
+            echo '#EXTINF:-1 tvg-logo="https://www.smg.cn/favicon.ico",SHTV少儿 HD' >> playlist_shanghai.m3u
+            echo 'http://121.24.98.226:8090/hls/43/index.m3u8' >> playlist_shanghai.m3u
+          fi
+          git add playlist_shanghai.m3u
+          git commit -m "Update Shanghai M3U (Unicom/Telecom)" || echo "No Shanghai changes"
 
       # 合并生成 all.m3u
       - name: Generate Combined M3U
         run: |
           echo "#EXTM3U" > playlist_all.m3u
-          echo "# 北京 + 上海全频道（自动同步）" >> playlist_all.m3u
+          echo "# 北京 + 上海全频道（自动同步，非移动源）" >> playlist_all.m3u
           if [ -f "playlist_beijing.m3u" ]; then cat playlist_beijing.m3u >> playlist_all.m3u; fi
           if [ -f "playlist_shanghai.m3u" ]; then cat playlist_shanghai.m3u >> playlist_all.m3u; fi
           echo "# 更新于 $(date '+%Y-%m-%d %H:%M')" >> playlist_all.m3u
